0.1/竞赛小车工程总说明书.md
# STM32F103C8T6 + K230 竞赛小车工程总说明书 v2.0

> **文件状态：** 基于 2026-05 实物车况修正版  
> **原版问题已修正：** 电池位置、线束状况、灰度品牌、飞线状态  
> **推荐放置位置：** `docs/STM32_K230_CAR_PROJECT_GUIDE.md`  
> **适用工具：** Cursor、VS Code、STM32CubeMX、ChatGPT/Claude（先读本文再生成代码）

---

## 0. 文档使用约定

- 本文是**工程总说明书**，所有硬件定义、引脚映射、模块分工、测试流程均以此为准。
- 使用 Cursor / Claude 生成代码时，**先让 AI 完整阅读本文**，再下达编程指令。
- 如果后续发现实物与本文有出入，**以实物为准并同步更新本文**。

---

## 1. 整车实物状态（截至 2026-05）

| 检查项 | 状态 | 备注 |
|--------|------|------|
| PCB 主板 | ✅ 已焊接完成 | |
| STM32F103C8T6 蓝板 | ✅ 已插入主板 | |
| K230 模组 | ✅ 已安装，通电屏幕亮 | 摄像头显示正常 |
| TB6612 电机驱动 | ✅ 已焊接 | VM 飞线已焊好接 12V |
| 灰度传感器 | ✅ 已安装车头下方 | 品牌：感为，支持按键自动校准阈值 |
| 编码电机 ×2 | ✅ 已装车 | |
| OLED 小屏 | ✅ 已连接 | |
| 蜂鸣器 | ✅ 已连接 | |
| 按键 ×4 | ✅ 已连接 | K1~K4 |
| 电池 | ✅ 已固定于车体**后方** | 扎带固定 |
| 线束 | ✅ 已整理，无缠绕/碰轮问题 | 不需要额外扎带处理 |
| 代码 | ❌ **尚未烧录** | 当前阶段：准备建立工程 |

---

## 2. 硬件架构与模块分工

### 2.1 模块职责表

| 模块 | 职责 | 开发优先级 |
|------|------|------------|
| **STM32F103C8T6** | 底盘实时控制（电机、编码器、灰度循迹、状态机） | ⭐ 第一优先 |
| **K230** | 图像识别（扑克牌）、结果显示、串口通信 | 🔵 第二优先，先独立跑通，再联调 |
| **TB6612** | 双电机 H 桥驱动 | 随 STM32 bring-up |
| **灰度模块（感为）** | 循迹黑线检测，按键自动校准 | 随 STM32 bring-up |
| **编码电机 ×2** | 速度与里程反馈 | 随 STM32 bring-up |
| **OLED** | STM32 状态显示、调试信息 | 第一版可暂缓，用串口调试替代 |
| **4 按键** | 模式切换、启动/停止、校准触发 | 随 STM32 bring-up |
| **蜂鸣器** | 状态提示（上电/完成/错误） | 随 STM32 bring-up |

### 2.2 核心开发原则

```
第一阶段：STM32 底盘独立跑通（灰度循迹 + 电机 + 编码器）
第二阶段：K230 独立识别跑通（屏幕显示结果）
第三阶段：串口联调，识别结果驱动状态机
```

**不要一开始就把所有模块混在一起调**。

---

## 3. 电源系统说明

### 3.1 电源路径

```
电池 12V（XT60 输入）
│
├── 飞线（已焊好）──→ TB6612 VM（电机电源）
│
└── AJ38 降压模块 ──→ 5V
│
└── 电源开关 ──→ 主板 5V 总线
├── STM32（经板载 3.3V LDO）
├── TB6612 VCC + STBY
├── OLED
├── 灰度传感器
└── 蜂鸣器
```

### 3.2 ⚠️ 安全关键约束

| 操作 | 状态 | 风险 |
|------|------|------|
| 关闭电源开关 | **仅断开 5V 侧** | TB6612 VM 仍可能有 12V |
| 拔电池 | **整车完全断电** | 无风险 |
| 改线/焊接/拔插电机 | 必须先拔电池 | 短路或触电风险 |

**记住：关开关 ≠ 安全。操作硬件前拔电池。**

### 3.3 上电前万用表检查清单

| 测量点 | 预期值 | 实测 | 
|--------|--------|------|
| 5V 与 GND 电阻 | >1kΩ（不短路） | |
| VM 与 GND 电阻 | >1kΩ（不短路） | |
| 3.3V 与 GND 电阻 | >1kΩ（不短路） | |
| 开开关后 5V | ~5V | |
| STM32 3.3V | ~3.3V | |
| TB6612 VCC | ~5V | |
| TB6612 STBY | ~5V | |
| TB6612 VM | ~电池电压（~12V） | |
| 关开关后 TB6612 VCC | ~0V | |

---

## 4. 引脚映射总表

### 4.1 电机与编码器

| 功能 | STM32 引脚 | 外设 | 连接对象 |
|------|-----------|------|----------|
| 左电机 PWM | PA0 | TIM2_CH1 | TB6612 PWMA |
| 右电机 PWM | PA1 | TIM2_CH2 | TB6612 PWMB |
| 左电机方向1 | PB12 | GPIO Out | TB6612 AIN1 |
| 左电机方向2 | PB13 | GPIO Out | TB6612 AIN2 |
| 右电机方向1 | PB14 | GPIO Out | TB6612 BIN1 |
| 右电机方向2 | PB15 | GPIO Out | TB6612 BIN2 |
| 左编码器 A | PA6 | TIM3_CH1 | 左电机 E1A |
| 左编码器 B | PA7 | TIM3_CH2 | 左电机 E1B |
| 右编码器 A | PB6 | TIM4_CH1 | 右电机 E2A |
| 右编码器 B | PB7 | TIM4_CH2 | 右电机 E2B |

**电机方向定义（前进）：**

| 电机 | IN1 | IN2 |
|------|-----|-----|
| 左（U10） | 1 | 0 |
| 右（U11） | 1 | 0 |

- 停止（滑行）：IN1=0, IN2=0
- 刹车：IN1=1, IN2=1

### 4.2 按键

| 按键 | 引脚 | 按下电平 |
|------|------|----------|
| K1 | PB1 | 0 |
| K2 | PB0 | 0 |
| K3 | PB10 | 0 |
| K4 | PB11 | 0 |

**⚠️ 注意：K1=PB1，K2=PB0，不要搞反。**

### 4.3 蜂鸣器

| 功能 | 引脚 | 备注 |
|------|------|------|
| BEEP | PB3 | 需关闭 JTAG，仅保留 SWD |

### 4.4 I2C 总线（灰度 + OLED）

| 功能 | 引脚 | 备注 |
|------|------|------|
| I2C1_SCL | PB8 (Remap) | SCL1 |
| I2C1_SDA | PB9 (Remap) | SDA1 |
| PA4 | **高阻输入 / Analog** | 不主动驱动 SDA1 |
| PA5 | **高阻输入 / Analog** | 不主动驱动 SCL1 |

**⚠️ 关键：PA4/PA5 连到了同一个 I2C 网络，必须配置为高阻态，否则会干扰 PB8/PB9 通信。**

### 4.5 串口（调试 + K230 联调）

| 功能 | 引脚 | 备注 |
|------|------|------|
| USART1_TX | PA9 | 接外部 RX（调试器 / K230） |
| USART1_RX | PA10 | 接外部 TX（调试器 / K230） |

注意：确保 K230 串口为 3.3V TTL 电平。不要接入 RS232。

---

## 5. STM32CubeMX 完整配置表

### 5.1 MCU 与工程基础

| 配置项 | 值 |
|--------|-----|
| MCU | STM32F103C8Tx |
| 封装 | LQFP48 |
| 工具链 | MDK-ARM 或 STM32CubeIDE |
| 固件包 | STM32Cube FW_F1（最新稳定版） |

### 5.2 System Core → SYS

| 配置项 | 值 | 原因 |
|--------|-----|------|
| Debug | **Serial Wire** | 关闭 JTAG，释放 PB3 给蜂鸣器 |
| Timebase Source | SysTick | 标准选择 |

### 5.3 System Core → RCC

| 配置项 | 值 |
|--------|-----|
| HSE | Crystal/Ceramic Resonator（如板载 8MHz 晶振稳定） |
| LSE | Disable |

### 5.4 Clock Configuration（时钟树）

| 参数 | 值 |
|------|-----|
| HSE | 8 MHz |
| PLL Source | HSE |
| PLL MUL | ×9 |
| **SYSCLK** | **72 MHz** |
| HCLK | 72 MHz |
| APB1 Prescaler | /2 → **36 MHz**（TIM2/3/4 在该总线） |
| APB2 Prescaler | /1 → **72 MHz** |

### 5.5 Timers → TIM2（PWM 生成）

| 配置项 | 值 | 说明 |
|--------|-----|------|
| Clock Source | Internal Clock | |
| Channel 1 | **PWM Generation CH1** | PA0，左电机 |
| Channel 2 | **PWM Generation CH2** | PA1，右电机 |
| Prescaler (PSC) | **0** | 72 MHz ÷ (0+1) = 72 MHz 定时器时钟 |
| Counter Period (ARR) | **3599** | 72 MHz ÷ 3600 = **20 kHz** |
| Auto-reload preload | **Enable** | |
| PWM Mode (CH1&CH2) | **PWM mode 1** | |
| Pulse (初始值) | **0** | ⚠️ 必须为 0，防止上电乱转 |
| CH Polarity | High | |

> **频率计算验证：** 72,000,000 ÷ (0+1) ÷ (3599+1) = 20,000 Hz ✅

### 5.6 Timers → TIM3（左编码器）

| 配置项 | 值 |
|--------|-----|
| Combined Channels | **Encoder Mode** |
| Encoder Mode | **TI1 and TI2**（4 倍频） |
| Prescaler | **0** |
| Counter Period | **65535**（最大值） |
| Input Filter (IC1 & IC2) | **8**（推荐值，视干扰调整 6~12） |
| 引脚 | PA6 = CH1, PA7 = CH2 |

### 5.7 Timers → TIM4（右编码器）

| 配置项 | 值 |
|--------|-----|
| Combined Channels | **Encoder Mode** |
| Encoder Mode | **TI1 and TI2** |
| Prescaler | **0** |
| Counter Period | **65535** |
| Input Filter (IC1 & IC2) | **8** |
| 引脚 | PB6 = CH1, PB7 = CH2 |

### 5.8 Connectivity → I2C1

| 配置项 | 值 |
|--------|-----|
| Mode | **I2C** |
| Remap | **Enable**（SCL→PB8, SDA→PB9） |
| Speed | **Standard (100 kHz)**（后续可调至 400 kHz） |
| Addressing Mode | 7-bit |
| Own Address | 0（STM32 做主机） |

### 5.9 Connectivity → USART1

| 配置项 | 值 |
|--------|-----|
| Mode | **Asynchronous** |
| Baud Rate | **115200** |
| Word Length | 8 Bits |
| Parity | None |
| Stop Bits | 1 |
| 引脚 | TX=PA9, RX=PA10 |

### 5.10 System Core → GPIO（非外设引脚）

| 引脚 | 配置 | 默认输出 | 说明 |
|------|------|----------|------|
| PB12 | GPIO_Output | **Low** | AIN1 |
| PB13 | GPIO_Output | **Low** | AIN2 |
| PB14 | GPIO_Output | **Low** | BIN1 |
| PB15 | GPIO_Output | **Low** | BIN2 |
| PB1 | GPIO_Input | Pull-up | K1 |
| PB0 | GPIO_Input | Pull-up | K2 |
| PB10 | GPIO_Input | Pull-up | K3 |
| PB11 | GPIO_Input | Pull-up | K4 |
| PB3 | GPIO_Output | **Low** | BEEP |
| PA4 | **Analog** | - | SDA1 高阻 |
| PA5 | **Analog** | - | SCL1 高阻 |

### 5.11 NVIC（中断优先级）

| 外设 | 优先级 | 说明 |
|------|--------|------|
| USART1 | Preempt: 3, Sub: 0 | 串口接收中断 |
| 其他 | 默认 | 后续如有定时中断再调整 |

---

## 6. 软件工程结构

```
CarProject/
├── docs/
│   └── STM32_K230_CAR_PROJECT_GUIDE.md    ← 本文
├── stm32/
│   ├── Core/
│   │   ├── Inc/
│   │   │   ├── user_config.h               ← 所有硬件宏定义
│   │   │   ├── bsp_motor.h
│   │   │   ├── bsp_encoder.h
│   │   │   ├── bsp_key.h
│   │   │   ├── bsp_beep.h
│   │   │   ├── bsp_gray.h                  ← 灰度 I2C 驱动
│   │   │   ├── bsp_oled.h                  ← OLED 驱动（可延后）
│   │   │   ├── bsp_uart_k230.h             ← K230 串口协议
│   │   │   ├── app_state.h                 ← 全局状态机
│   │   │   ├── app_control.h               ← 循迹 / 电机控制
│   │   │   └── app_debug.h                 ← 调试模式
│   │   └── Src/
│   │       ├── main.c                      ← 仅保留 CubeMX 生成框架
│   │       ├── user_main.c                 ← 用户调度入口
│   │       ├── bsp_motor.c
│   │       ├── bsp_encoder.c
│   │       ├── bsp_key.c
│   │       ├── bsp_beep.c
│   │       ├── bsp_gray.c
│   │       ├── bsp_oled.c
│   │       ├── bsp_uart_k230.c
│   │       ├── app_state.c
│   │       ├── app_control.c
│   │       └── app_debug.c
│   └── project.ioc                        ← CubeMX 工程文件
└── k230/
├── vision_main.py                     ← 识别程序
└── uart_protocol.md                   ← 串口协议约定
```

**代码规范：**
- `main.c` 只在 USER CODE 区域写 `User_App_Init()` 和 `while(1){ User_App_Loop(); }`
- BSP 层只操作硬件，不碰业务逻辑
- APP 层负责状态机、循迹算法、任务调度
- 所有配置宏集中在 `user_config.h`

---

## 7. `user_config.h` 模板

```c
#ifndef __USER_CONFIG_H
#define __USER_CONFIG_H

#include "main.h"
#include "tim.h"
#include "usart.h"
#include "i2c.h"

/* ============ PWM ============ */
#define MOTOR_PWM_MAX               3599
#define MOTOR_PWM_MIN               0

#define L_PWM_TIM                   htim2
#define L_PWM_CH                    TIM_CHANNEL_1    // PA0
#define R_PWM_TIM                   htim2
#define R_PWM_CH                    TIM_CHANNEL_2    // PA1

/* ============ 电机方向 ============ */
#define L_IN1_PORT                  GPIOB
#define L_IN1_PIN                   GPIO_PIN_12      // AIN1
#define L_IN2_PORT                  GPIOB
#define L_IN2_PIN                   GPIO_PIN_13      // AIN2

#define R_IN1_PORT                  GPIOB
#define R_IN1_PIN                   GPIO_PIN_14      // BIN1
#define R_IN2_PORT                  GPIOB
#define R_IN2_PIN                   GPIO_PIN_15      // BIN2

/* ============ 按键 ============ */
#define KEY1_PORT                   GPIOB
#define KEY1_PIN                    GPIO_PIN_1       // K1 = PB1
#define KEY2_PORT                   GPIOB
#define KEY2_PIN                    GPIO_PIN_0       // K2 = PB0
#define KEY3_PORT                   GPIOB
#define KEY3_PIN                    GPIO_PIN_10      // K3 = PB10
#define KEY4_PORT                   GPIOB
#define KEY4_PIN                    GPIO_PIN_11      // K4 = PB11

#define KEY_PRESSED_LEVEL           GPIO_PIN_RESET

/* ============ 蜂鸣器 ============ */
#define BEEP_PORT                   GPIOB
#define BEEP_PIN                    GPIO_PIN_3

/* ============ 编码器 ============ */
#define LEFT_ENCODER_TIM            htim3
#define RIGHT_ENCODER_TIM           htim4
#define LEFT_ENCODER_DIR            1     // 实车测后可能改 -1
#define RIGHT_ENCODER_DIR           1     // 实车测后可能改 -1

/* ============ I2C ============ */
#define CAR_I2C                     hi2c1

/* ============ UART ============ */
#define K230_UART                   huart1

/* ============ 任务周期 (ms) ============ */
#define KEY_TASK_PERIOD_MS          10
#define SPEED_TASK_PERIOD_MS        10
#define LINE_TASK_PERIOD_MS         5
#define OLED_TASK_PERIOD_MS         100
#define BEEP_TASK_PERIOD_MS         10

#endif
```

---

## 8. 分阶段开发流程

### 8.1 第一阶段：最小系统验证（预计 1 个晚上）

**目标：** 确认 STM32 能烧录、引脚能控制、串口能打印。

| 步骤 | 操作 | 验证方法 |
|---:|---|---|
| 1 | 创建 CubeMX 工程，按第 5 节配置 | 生成代码，编译通过 |
| 2 | 烧录空工程 | ST-Link 能连接，下载成功 |
| 3 | 写蜂鸣器 GPIO 测试 | PB3 高低电平变化，蜂鸣器响/停 |
| 4 | 写按键 GPIO 读取 | 按下 K1~K4，串口打印按键值；按下应为 0 |
| 5 | 串口 `printf` 测试 | 上位机收到 `Hello STM32` |

**本阶段边界：** 此阶段不涉及电机、编码器、I2C，避免调试范围过大。

### 8.2 第二阶段：电机空载测试（预计 1 个晚上）

**目标：** 确认两个电机能正反转，PWM 输出正常。

> ⚠️ 测试前必须让车轮架空，不接触桌面。TIM2 PWM 初始 `Pulse=0`，方向引脚初始化默认 Low。

| 步骤 | 操作 | 验证方法 |
|---:|---|---|
| 1 | 配置 TIM2 PWM，初始 `pulse=0` | 编译、烧录成功，上电电机不乱转 |
| 2 | 左电机前进，`PWM=300`，持续 1 秒后停止 | 左轮正转 |
| 3 | 左电机后退，`PWM=-300`，持续 1 秒后停止 | 左轮反转 |
| 4 | 右电机前进，`PWM=300`，持续 1 秒后停止 | 右轮正转 |
| 5 | 右电机后退，`PWM=-300`，持续 1 秒后停止 | 右轮反转 |
| 6 | `stop`，方向输入 `IN1=0, IN2=0` | 两轮惰性停止 |
| 7 | `brake`，方向输入 `IN1=1, IN2=1` | 两轮急停 |

**方向修正原则：** 如果方向反了，只改 `bsp_motor.c` 内的方向逻辑，不改引脚表，不改 CubeMX 映射。

### 8.3 第三阶段：编码器验证（预计 1 个晚上）

**目标：** 确认编码器能读数，方向与电机前进方向一致。

| 步骤 | 操作 | 验证方法 |
|---:|---|---|
| 1 | 初始化 TIM3/TIM4 编码器模式 | 程序运行无异常 |
| 2 | 用手转动左轮 | 串口打印 TIM3 `CNT` 值变化 |
| 3 | 用手转动右轮 | 串口打印 TIM4 `CNT` 值变化 |
| 4 | 电机驱动左轮前进 | 串口打印左轮 `delta` 应为正 |
| 5 | 电机驱动右轮前进 | 串口打印右轮 `delta` 应为正 |

**方向修正原则：** 如果 `delta` 为负，修改 `user_config.h` 中对应的 `ENCODER_DIR` 为 `-1`。

### 8.4 第四阶段：I2C 与灰度验证（预计 0.5~1 个晚上）

**目标：** 确认感为灰度传感器 I2C 通信正常，阈值校准有效。

| 步骤 | 操作 | 验证方法 |
|---:|---|---|
| 1 | I2C 地址扫描，范围 `0x03~0x77` | 串口打印发现的设备地址 |
| 2 | 触发感为灰度模块按键校准 | 观察指示灯，确认校准完成 |
| 3 | 读取灰度值 | 白底与黑线数值有明显差异 |
| 4 | 手动偏移传感器位置 | `error` 正负与实际偏移方向一致 |

**实物说明：** 当前灰度模块为感为灰度，可通过板载按键傻瓜式调阈值；不同高度可重新按键校准，暂不作为机械问题处理。

### 8.5 第五阶段：开环低速循迹（预计 1~2 个晚上）

**目标：** 小车能低速沿黑线稳定走完一圈。

| 步骤 | 操作 | 验证方法 |
|---:|---|---|
| 1 | 使用初始参数：`base_pwm=600, Kp=20, Kd=0` | 小车能缓慢启动，不乱冲 |
| 2 | 直线低速测试 | 车身无明显摆动 |
| 3 | 小弯测试 | 能跟随黑线 |
| 4 | 大弯测试 | 不丢线 |
| 5 | 手动遮挡灰度约 0.2 秒 | 不应立刻失控 |
| 6 | 完整一圈 | 能回到起点 |

**调参顺序：**

1. 先只调 `Kp`，每次 `+10`，直到直线轻微摆动。
2. 再加 `Kd`，每次 `+10`，直到摆动减小或消除。
3. 最后逐步提高 `base_pwm`，不要一开始就追求速度。

### 8.6 第六阶段：K230 独立调试 + 串口联调

**目标：** 先让 K230 独立完成识别与显示，再与 STM32 串口通信。

| 步骤 | 操作 | 预期结果 |
|---:|---|---|
| 1 | K230 独立运行识别程序 | 屏幕显示摄像头画面和识别结果 |
| 2 | STM32 ↔ K230 串口收发测试 | 双向通信正常 |
| 3 | 联调协议解析 | STM32 能解析 K230 发来的识别结果 |
| 4 | 识别结果驱动状态机 | 例如：看到牌 → 记下 → 一圈后显示 |

**当前 K230 备注：** K230 会重启，但单独供电也会出现，因此暂时保留该问题；当前判断更可能与未烧录/未稳定运行代码有关，先不作为电源或接线故障定性。

### 8.7 第七阶段：比赛流程整合

按比赛要求实现完整状态机：

```text
出发 → 第一圈（含识别）→ 声光提示 → 第二圈 → 自动停车 → 显示里程和时间
```

---

## 9. 比赛任务专项设计

### 9.1 基础部分：循迹 + 避牌 + 两圈停车

- 扑克牌背面朝上放在黑线上。
- 对灰度传感器来说，压过牌时数值会突变，可能表现为大面积白色、杂色或短时间丢线。
- 处理策略：丢线短时间内（小于 150 ms）保持上一周期转向值，让车直行碾过去；中等丢线时降速找线；长时间丢线时停车保护。

```c
// 关键的丢线保护（在循迹任务里实现）
if (line_found) {
    last_error = error;
    lost_time = 0;
    // 正常 PD 控制
} else {
    lost_time++;
    if (lost_time < 30) {        // 30 × 5ms = 150ms，短丢线
        // 保持 last_error 不变
    } else if (lost_time < 100) { // 100 × 5ms = 500ms，中等丢线
        base_pwm *= 0.7;          // 降速找线
    } else {
        // 停车，进入错误状态
    }
}
```

### 9.2 发挥部分：识别外围扑克牌

- K230 在小车行进中识别扑克牌正面。
- 推荐串口协议：`$CARD,<花色>,<x>,<y>,<置信度>\n`。
- STM32 收到后存储结果，第一圈结束时在 OLED 显示。
- 注意：识别任务应在第一圈行进中完成，不是停车后再识别。

### 9.3 声光提示设计

| 事件 | 蜂鸣器 | LED/OLED 显示 |
|---|---|---|
| 上电完成 | 1 短 | OLED 显示 `READY` |
| 第一圈完成 | 2 短 | OLED 显示 `LAP1 DONE` |
| 第二圈完成 | 1 长 | OLED 显示 `FINISH` |
| 错误（丢线 > 500 ms） | 3 急促短 | OLED 显示 `ERROR` |

---

## 10. 比赛前最终检查清单

| 序号 | 检查项 | 状态 |
|---:|---|---|
| 1 | 电池已充电 |  |
| 2 | 车架螺丝紧固 |  |
| 3 | VM 飞线连接可靠 |  |
| 4 | 车轮不摩擦车架/线束 |  |
| 5 | STM32 可正常烧录 |  |
| 6 | 按键全部正确 |  |
| 7 | 蜂鸣器正常 |  |
| 8 | 双电机方向正确 |  |
| 9 | 编码器方向正确 |  |
| 10 | 灰度误差方向正确 |  |
| 11 | 低速循迹一圈稳定 |  |
| 12 | 丢线短时间保护有效 |  |
| 13 | 两圈自动停车正常 |  |
| 14 | K230 识别 + 串口正常 |  |
| 15 | OLED 信息显示正确 |  |

---

## 附录 A：快速调试命令（串口）

建议在调试阶段通过串口实现命令行控制。

| 命令 | 功能 |
|---|---|
| `motor l 500` | 左电机正转 500 |
| `motor r -300` | 右电机反转 300 |
| `motor stop` | 两电机 stop |
| `enc` | 打印编码器值 |
| `gray` | 打印灰度值 |
| `i2cscan` | I2C 地址扫描 |
| `state` | 打印当前状态机状态 |

---

## 文档维护说明

任何硬件修改、引脚变动、或实测发现的配置差异，请立即更新本文，确保本文始终是工程的“唯一真相源”。
